[tool.poetry]
name = "heksher"
version = "0.1.1"
description = ""
authors = ["Biocatch LTD <serverteam@biocatch.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/biocatchltd/heksher-py"
packages = [
    {include="heksher"}
]

[tool.poetry.dependencies]
python = "^3.7"
orjson = "^3.0.0"
httpx = "^0.16.0"
mock = {version="^4.0.0", markers = "python_version < '3.8'"}
ordered-set = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = { version = "*", allow-prereleases = true }
pytest-cov = "*"
pytype = { version = ">=2020.06.01", markers = "python_version < '3.9' and python_version >= '3.6' and platform_system != 'Windows'"}
yellowbox = {version="^0.4.0", extras=["http"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

